crates/pardosa/tests/ui/no_migration_policy.rs
use pardosa::store::MigrationPolicy;
fn main() {
    let _: Option<MigrationPolicy> = None;
}
